# static_templater

./: Cargo.toml  README.md
data/: test.rs.html
src/: ast_generator.rs  lib.rs  main.rs  template_ast.rs  template_parser.rustpeg  translate.rs  types.rs  utils.rs
tests/: test_show.rs  test_show_fields.rs  test_show_getitem.rs
