# -*- conf -*-
[package]
name = "static_templater"
version = "0.0.1"
authors = ["Vladimir Lagunov <lagunov.vladimir@gmail.com>"]


[lib]
name = "static_templater"
path = "src/lib.rs"
test = true
plugin = true
crate-type = ["dylib"]


[build-dependencies.peg]
git = "https://github.com/kevinmehall/rust-peg"
rev = "409ced296b9dcf5d828b2caa736b9b28088cdb68"
