# -*- conf -*-
[package]
name = "static_templater"
version = "0.0.1"
authors = ["Vladimir Lagunov <lagunov.vladimir@gmail.com>"]


[lib]
name = "static_templater"
path = "src/lib.rs"
test = true
plugin = true


[dependencies]
peg = "0.1.5"
gcc = "0.1.7"
time = "*"


# [dependencies.peg]
# git = "https://github.com/kevinmehall/rust-peg"
# rev = "dd12872b"
# plugin = true
